# benchpress

./: .env.example  .gitignore  LICENSE  README.md  benchpress.yaml  benchpress.yaml.example  pyproject.toml
benchpress/: cli.py  client.py  config.py  models.py  prompts.py  report.py  runner.py  scorer.py
